Add logic to main-page, add-character and list components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
-<h1>angular-dbz-app</h1>
+<div class='container'>
+  <h1>angular-dbz-app</h1>
+  <hr>
 
-<hr>
+  <app-dbz-main-page></app-dbz-main-page>
+</div>
 
-<app-dbz-main-page></app-dbz-main-page>
+
 
 
 
