--- a/src/app/dbz/components/add-character/add-character.component.html
+++ b/src/app/dbz/components/add-character/add-character.component.html
@@ -1,7 +1,7 @@
 <h4>Add character</h4>
-<form class='row'>
-  <input type='text' placeholder='Name..' class='form-control mb-2'>
-  <input type='number' placeholder='Power..' class='form-control mb-2'>
+<form class='row' (ngSubmit)='onSubmitCharacter()'>
+  <input type='text' placeholder='Name..' class='form-control mb-2' [(ngModel)]='character.name' name='characterName'>
+  <input type='number' placeholder='Power..' class='form-control mb-2' [(ngModel)]='character.power' name='characterPower'>
 
   <button class='btn btn-primary' type='submit'>Add</button>
 </form>
