--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -5,12 +5,12 @@
   <div class='col'>
     <dbz-list
       [characterList]='characters'
-      (deleteCharacter)='deleteCharFromList($event)'
+      (deleteCharacter)='onDeleteCharFromList($event)'
     ></dbz-list>
   </div>
 
   <div class='col'>
-    <dbz-add-character (addCharacter)='addCharacterToList($event)'></dbz-add-character>
+    <dbz-add-character (addCharacter)='onAddCharacter($event)'></dbz-add-character>
   </div>
 </div>
 
